# rgxg

./: .travis.yml  AUTHORS  COPYING  ChangeLog  Makefile.am  NEWS  README  autogen.sh  configure.ac  version.sh
.github/workflows/: linux.yml  macos.yml
include/rgxg/: net.h  number.h  types.h  utils.h
lib/: common_macros.h  internal_utils.c  internal_utils.h  net.c  number.c  rgxg.pc.in  utils.c
m4/: lib_version.m4
man/: rgxg.1  rgxg_net_cidr_string.3  rgxg_number_range.3  rgxg_utils_alternation.3  rgxg_utils_escape_string.3
src/: alternation.c  alternation.h  cidr.c  cidr.h  common_macros.h  escape.c  escape.h  main.c  range.c  range.h  rgxg.h
tests/: check_rgxg.c  check_rgxg.h  check_rgxg_net.c  check_rgxg_number.c
